--- a/lucene/pom.xml
+++ b/lucene/pom.xml
@@ -25,6 +25,12 @@
 			<artifactId>lucene-queryparser</artifactId>
 			<version>8.2.0</version>
 		</dependency>
+		<!-- 高亮显示 -->
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-highlighter</artifactId>
+			<version>8.2.0</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
